# russian-stocks-bot

./: .env.dist  .gitignore  1  Dockerfile  README.md  docker-compose.yaml  machine.py  ordered.txt  pyproject.toml  setup.cfg  stocks.json  test.sh
.ci/: deploy.sh
.ci/helm/: .sops.yaml  Chart.yaml  prodiction.values.yaml  production.values.yaml  secrets.production.values.yaml  secrets.staging.values.yaml  values.yaml
.ci/helm/chart/: values.yaml
.ci/helm/chart/templates/: bot.yaml
.ci/helm/charts/: values.yaml
.ci/helm/charts/templates/: bot.yaml  pvc.yaml
.ci/helm/templates/: configmap.yaml
.github/workflows/: dockerimage.yml
articles/: rules.txt  welcome.txt
bot/: __init__.py  __main__.py  alg.py  constants.py  entities.py  keyboards.py  logs.py  modules.py  settings.py  storage.py
bot/actions/: __init__.py  abc.py  groups.py  menu.py  rules.py  start_voting.py  stop_voting.py  users.py  welcome.py  winners.py
bot/actions/admin/: __init__.py  ask_for_vote.py  dump.py  health.py  results.py
bot/actions/admin/purchases/: __init__.py  add.py  list.py
bot/actions/voting/: __init__.py  action.py  constants.py  machine.py  reply.py
bot/cron/: history.py
bot/services/: __init__.py  asset.py  db.db  db.py  deal.py  modules.py  portfolio.py  stocks.py  ticker.py  users.py  voting.py
