[tool.poetry]
name = "russian-stocks-bot"
version = "0.1.0"
description = ""
authors = ["Vadim Ryazanov <vadimvoronezh@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^3.7.5"
python-dotenv = "^0.15.0"
requests = "^2.25.1"
pydantic = "^1.7.3"
transitions = "^0.8.6"
python-telegram-handler = "^2.2"
injector = "^0.18.4"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
isort = "^5.7.0"
wemake-python-styleguide = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
